# rnn-lstm

./: README.md  app.py  pyproject.toml
aula 2023 10 06 - rnn lstm prática/: LICENSE  README.md  app.py
aula 2023 10 06 - rnn lstm prática/src/: rnn.py  utils.py
aula 2023 11 17 - gans prática/: Conditional_GANs.ipynb
aula 2023 12 08 - transfer learning prática/: CNN_com_Transfer_Learning.ipynb
media/videos/main/480p15/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
media/videos/scene/480p15/partial_movie_files/LSTMAnimation/: partial_movie_file_list.txt
media/videos/scene/480p15/partial_movie_files/LSTMCell/: partial_movie_file_list.txt
media/videos/scene/480p15/partial_movie_files/RNNUnroll/: partial_movie_file_list.txt
src/: lstm.py  lstm_sentiment.py  rnn.py  scene.py
