[tool.poetry]
name = "rnn-lstm"
version = "0.1.0"
description = ""
authors = ["Carolina Dias <carolina.dias.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
manim = "^0.17.3"
numpy = "^1.26.0"
streamlit = "^1.27.1"
plotly = "^5.17.0"
nltk = "^3.8.1"
tensorflow = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
